# systemd-informer

./: .gitignore  systemd-informer  systemd-informer.cabal
Informer/: Journal.hs  Monitor.hs  Notification.hs  Notifications.hs  Report.hs  Systemd.hs  Util.hs
app/: Main.hs
src/Informer/: Monitor.hs  Notifications.hs  Report.hs  Systemd.hs  Util.hs
